--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,11 @@
 [build]
-builder = "DOCKERFILE"
-dockerfilePath = "./Dockerfile"
+builder = "NIXPACKS"
+buildCommand = "mvn clean package -DskipTests"
 
 [deploy]
+startCommand = "java -jar target/discord-selfbot.jar"
 healthcheckPath = "/health"
-healthcheckTimeout = 100
-restartPolicyType = "always"
-restartPolicyMaxRetries = 3
+healthcheckTimeout = 30
 
 [variables]
-NODE_ENV = "production"
+PORT = "8080"
